--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,17 +1,33 @@
 <div>
-    Line charts
+    <app-widget-area></app-widget-area>
 </div>
+
+,<br>
 
 <mat-divider></mat-divider>
 
-<div>
-    <div>Line chart</div>
-    <div>Line chart</div>
-    <div>Line chart</div>
-    <div>Line chart</div>
+<br>
+
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-cards">
+    <mat-card fxFlex="25">
+        <app-widget-card label="Users" total="18k" percentage="50%"></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25">
+        <app-widget-card label="Users" total="18k" percentage="50%"></app-widget-card>
+    </mat-card>    
+    <mat-card fxFlex="25">
+        <app-widget-card label="Users" total="18k" percentage="50%"></app-widget-card>
+    </mat-card>    
+    <mat-card fxFlex="25">
+        <app-widget-card label="Users" total="18k" percentage="50%"></app-widget-card>
+    </mat-card>
 </div>
 
+<br>
+
 <mat-divider></mat-divider>
+
+<br>
 
 <div>
     <div>Table</div>
